--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,7 +52,8 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/cb_remember_pass"/>
+            android:id="@+id/cb_remember_pass"
+            android:checked="true"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
