--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,5 +118,17 @@
         android:layout_height="45dp"
         android:text="update table" />
 
+    <Button
+        android:id="@+id/bt_query"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:text="query table" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_query"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
