--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,22 +49,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <CheckBox
+            android:id="@+id/cb_remember_pass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/cb_remember_pass"
-            android:checked="true"/>
+            android:checked="true" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:text="Rememner password"/>
+            android:text="Rememner password"
+            android:textSize="18sp" />
     </LinearLayout>
 
     <Button
         android:id="@+id/bt_login"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:layout_margin="10dp"
         android:text="Login" />
+
+    <Button
+        android:id="@+id/bt_save"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_margin="10dp"
+        android:text="save in file" />
+
 
 </LinearLayout>
